// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Generate documentation > For simple cases 1`] = `
[
  {
    "defaultValue": undefined,
    "description": "

",
    "flags": {
      "isOptional": false,
    },
    "name": "newString",
    "typeName": "string",
  },
]
`;

exports[`Generate documentation > deal with more complex types 1`] = `
[
  {
    "defaultValue": undefined,
    "description": undefined,
    "flags": {
      "isOptional": false,
    },
    "name": "all",
    "typeName": "Array",
  },
]
`;
